--- a/style.css
+++ b/style.css
@@ -102,9 +102,20 @@ ul {
     overflow: hidden;
 }
 
+.card-projeto video {
+    margin-top: 20px;
+    margin-left: 15px;
+    height: 340px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
 .img-projeto {
     object-fit: cover;
-    margin: 20px;
+    margin-top: 20px;
+    margin-left: 50px;
+    height: 400px;
+    border-radius: 10px;
 }
 
 .info-projeto {
@@ -118,6 +129,10 @@ ul {
 .info-projeto p {
     color: #bbb;
     margin-bottom: 15px;
+}
+
+.info-projeto a {
+    text-decoration: none;
 }
 
 .info-projeto {
